# manyplay

./: Cargo.toml
src/: main.rs
src/commands/: botinfo.rs  join.rs  leave.rs  mod.rs  ping.rs  play.rs
src/utils/: load_commands.rs  mod.rs  startup.rs
