[package]
name = "manyplay"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
poise = "0.6"
anyhow = "1.0.97"
toml = "0.8"
chrono = "0.4"
chrono-tz = "0.10"
glob = "0.3"
syn = { version = "2.0", features = ["full"] }
songbird = "0.5"